=========
CHANGELOG
=========

2.7.2.dev0
==================

-

2.7.1 (2016-01-28)
==================

**Bug fixes**

- Set language to capture map images

2.7.0 (2016-01-28)
==================

**New features**

- Allow to override the css selector to wait to capture map image

2.6.1 (2015-11-05)
==================

**Bug fixes**

- Rework CSS to prevent overlaping controls in list view

2.6.0 (2015-10-28)
==================

**Breaking changes**

- Use translated verbose_name fields instead of column/property names in shapefiles export

2.5.2 (2015-07-29)
==================

**Bug fixes**

- Upgrade gpxpy (fix elevation 0 in GPX exports)

2.5.1 (2015-07-29)
==================

**Bug fixes**

- Readd missing dependencies

2.5.0 (2015-07-28)
==================

**New features**

- Add possibility to add custom menu entries

2.4.2 (2015-07-06)
==================

**Bug fixes**

- Don't crash when logging anonymous actions


2.4.1 (2015-06-24)
==================

**Bug fixes**

- Fix insertion of images with WeasyPrint


2.4.0 (2015-06-19)
==================

**New features**

- Use WeasyPrint PDF export system


2.3.0 (2015-06-09)
==================

**New features**

- Hide models in navbar when not allowed to read them


2.2.0 (2015-05-22)
==================

**New features**

- Auto cleanup of HTML markup when pasting into TinyMCE


2.1.0 (2015-04-28)
==================

**New features**

- Configurable Django Rest Framework API URL


2.0.0 (2015-04-23)
==================

**Breaking changes**

- Remove trailing slash from API URLs (/api/models.json instead of /api/models/)

**Bug fixes**

- Fix LastModifiedMixin to handle all dispatch() parameters


1.16.0 (2015-03-20)
===================

**New features**

- Allow to add links to Youtube or Soundcloud media as attachment


1.15.2 (2015-03-11)
===================

**Bug fixes**

- Workaround a bug in django test framework


1.15.1 (2015-03-11)
===================

**Bug fixes**
