@@ -1,6 +1,6 @@
-Django==1.6.7
+Django==1.6.11
 paperclip==0.4.1
-djangorestframework==2.4.2
+djangorestframework==3.2.5
 gpxpy==0.9.8
 BeautifulSoup4==4.1.3
 requests==1.2.3
@@ -15,7 +15,7 @@ django-tinymce==1.5.1
 django-appypod>=0.0.2
 django-leaflet>=0.14
 django-geojson==2.6.0
-djangorestframework-gis==0.7
+djangorestframework-gis==0.9.6
 django-embed-video==0.11
 WeasyPrint==0.23
 django-weasyprint==0.1
