@@ -5,7 +5,9 @@ CHANGELOG
 2.7.2.dev0
 ==================
 
--
+**Bug fixes**
+
+- Fix to work with django rest framework 3
 
 2.7.1 (2016-01-28)
 ==================
